@@ -335,6 +335,13 @@ t_bunny_response	bunny_loop_mw(t_bunny_window	**window,
       scream_log_if(PATTERN "leave_context)", window, nwin, freq, data);
       gl_callback.leaving_context(rep, data);
     }
+  for (i = 0; i < nwin; ++i)
+    {
+      struct bunny_window	*win = (struct bunny_window*)window[i];
+
+      if (win)
+	while (win->window->pollEvent(event));
+    }
   scream_log_if("%p window, %zu nbr_window, %u frequency, %p parameter -> %d (Exiting)", window, nwin, freq, data, rep);
   return (rep);
 }
